fixed error in aligning items horizontally

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,7 +18,7 @@ body {
 
 .nav {
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
     height: 50px;
     &__item {
